Hero section update

--- a/index.html
+++ b/index.html
@@ -50,17 +50,29 @@
      </div>
    </div>
  </header>
- <!-- article start here -->
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, iste tempora voluptate officia dolorem saepe odio voluptas cum perferendis est atque officiis nam beatae eius a recusandae ipsam. Ex consectetur, rerum autem ipsam animi a non tempore cum officia ab numquam expedita, magni ad? Praesentium pariatur magnam fugiat voluptates et beatae, rerum architecto incidunt eius at optio veritatis ipsam. Nostrum nisi excepturi ipsam inventore animi error atque quo amet, libero eaque optio obcaecati, quam modi dolore, sed incidunt omnis quia earum minima. Enim ducimus, vero voluptatum dolorem mollitia perspiciatis et aliquam eaque? Itaque fugit consequatur, voluptatem eos dolor a ullam, et ipsum optio adipisci possimus impedit in? Repellendus accusantium nemo ad corrupti dignissimos earum veniam beatae veritatis reiciendis temporibus ipsam praesentium esse odit dicta, laudantium corporis ex debitis possimus magnam deleniti. Ipsa suscipit, fugit deserunt autem odit quis rem id officiis, quas magnam eligendi fuga quae aliquid corrupti commodi, labore soluta. Repellat modi iure mollitia et ex deserunt. Ipsum, eaque! Omnis, voluptatem non? Obcaecati reprehenderit, consequatur nisi nesciunt quaerat hic ducimus maxime id culpa. Aut voluptates, sunt laudantium cumque ipsum itaque consequuntur tempora nobis exercitationem odio alias. Quos quis nam ipsa itaque illo recusandae quam. Eum obcaecati consectetur laboriosam voluptates, nesciunt iste in delectus accusamus qui alias dignissimos sapiente eaque placeat suscipit iure sit eligendi aut deleniti perspiciatis est quidem minima aspernatur doloribus itaque. Molestiae suscipit quos est atque autem excepturi nostrum cum officiis qui sit? Ea veniam pariatur impedit officia inventore tempora eius, laboriosam in nam, labore, cum culpa. Magni eligendi, similique architecto rerum officia nemo rem a doloremque modi esse explicabo consequatur minima, illo voluptatum blanditiis voluptates voluptate. Suscipit ex asperiores cumque consectetur a quos alias placeat omnis! Odit, natus expedita et rerum tenetur a dignissimos. Dolorem maxime rem libero harum nam omnis facilis voluptas velit consequatur, officiis laborum facere ab quaerat qui explicabo! Fugiat, blanditiis. Sequi eligendi ipsa ratione dolorum nulla optio error corrupti illo, cumque velit quam officia quos sint quas necessitatibus laudantium dolorem atque accusamus fuga molestias quibusdam culpa natus ab ullam. Asperiores, earum quo aperiam possimus sed ipsum sint? Autem, eos itaque ipsa porro est veniam saepe nam debitis id sapiente magni! Omnis ex aspernatur ipsa soluta assumenda excepturi repellat maiores voluptates expedita ipsam, esse optio veniam error, dolor libero facere amet! Iste deserunt repudiandae quasi sit ipsa. Molestiae nostrum facere odit qui amet et, aut quo autem placeat exercitationem unde quae fugiat asperiores labore provident aliquid dolor non modi corporis magni sit corrupti assumenda quibusdam aliquam! Voluptatum corrupti quisquam ducimus harum? Impedit dicta culpa facere architecto fuga laborum reiciendis pariatur. Minus minima, repellendus perspiciatis, obcaecati blanditiis ad sint iusto iure expedita repellat eaque explicabo! Aspernatur quas mollitia et, voluptate similique facilis tempore! Asperiores cumque sequi maiores aut omnis officiis vero harum? Ullam alias id quam neque ex culpa consequatur esse fugit fuga exercitationem, sit hic. Magni ea iure molestias, sit assumenda rem, esse totam quisquam, ab perspiciatis impedit eos! Qui totam quos dolore amet doloribus quae delectus, alias explicabo obcaecati labore aperiam minima!
-      </p>
-    </div>
-  </div>
-</div>
- <!-- article end here -->
+
+ <!-- hero section start -->
+ <div class="hero-section">
+   <div class="container">
+     <div class="row justify-content-lg-center text-center">
+       <div class="col-lg-8">
+        <div class="hero-content-wrapper">
+          <p>What your insurer should deliver.</p>
+          <h1>Ready for tomorrow? Make sense
+            of it with Vinso insurance</h1>
+            <div class="inso-hero-button">
+              <a href="" class="inso-btn inso-btn-dark">Find an agent</a>
+              <a href="" class="inso-btn inso-btn-white">Get a quote</a>
+            </div>
+        </div>
+       </div>
+     </div>
+   </div>
+ </div>
+
+ <!-- hero section end -->
+  <!-- service section start -->
+  <!-- service section end -->
 
  <!-- footer section -->
 
