counter js update

--- a/index.html
+++ b/index.html
@@ -72,8 +72,128 @@
 
  <!-- hero section end -->
   <!-- service section start -->
+  <div class="service-section section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="service-title">
+              <p>INSURANCE SERVICE</p>
+              <h1>Our feature services</h1>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="find-btn">
+              <a href="#">Find an agent</a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <!-- single item -->
+          <div class="col-lg-4">
+            <div class="single-service-box">
+              <div class="service-icon">
+                <i class="fa fa-home"></i>
+              </div>
+              <div class="service-content">
+                <h5>Home insurance</h5>
+                <p>Protect your house so it always
+                  feels like home.</p>
+              </div>
+            </div>
+          </div>
+          <!-- single item end -->
+             <!-- single item -->
+             <div class="col-lg-4">
+              <div class="single-service-box">
+                <div class="service-icon">
+                  <i class="fa fa-home"></i>
+                </div>
+                <div class="service-content">
+                  <h5>Home insurance</h5>
+                  <p>Protect your house so it always
+                    feels like home.</p>
+                </div>
+              </div>
+            </div>
+            <!-- single item end -->
+               <!-- single item -->
+          <div class="col-lg-4">
+            <div class="single-service-box">
+              <div class="service-icon">
+                <i class="fa fa-home"></i>
+              </div>
+              <div class="service-content">
+                <h5>Home insurance</h5>
+                <p>Protect your house so it always
+                  feels like home.</p>
+              </div>
+            </div>
+          </div>
+          <!-- single item end -->
+             <!-- single item -->
+             <div class="col-lg-4">
+              <div class="single-service-box">
+                <div class="service-icon">
+                  <i class="fa fa-home"></i>
+                </div>
+                <div class="service-content">
+                  <h5>Home insurance</h5>
+                  <p>Protect your house so it always
+                    feels like home.</p>
+                </div>
+              </div>
+            </div>
+            <!-- single item end -->
+               <!-- single item -->
+          <div class="col-lg-4">
+            <div class="single-service-box">
+              <div class="service-icon">
+                <i class="fa fa-home"></i>
+              </div>
+              <div class="service-content">
+                <h5>Home insurance</h5>
+                <p>Protect your house so it always
+                  feels like home.</p>
+              </div>
+            </div>
+          </div>
+          <!-- single item end -->
+             <!-- single item -->
+             <div class="col-lg-4">
+              <div class="single-service-box">
+                <div class="service-icon">
+                  <i class="fa fa-home"></i>
+                </div>
+                <div class="service-content">
+                  <h5>Home insurance</h5>
+                  <p>Protect your house so it always
+                    feels like home.</p>
+                </div>
+              </div>
+            </div>
+            <!-- single item end -->
+        </div>
+      </div>
+  </div>
   <!-- service section end -->
+<!-- achivement section -->
+<div class="achivement-section section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <div class="inso-title-box">
+          <h5>Our Achievements</h5>
+          <h1>Achievements acquired</h1>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
 
+      </div>
+    </div>
+  </div>
+</div>
  <!-- footer section -->
 
  <footer>
@@ -157,6 +277,10 @@
   <script src="assets/js/plugins/wow.js"></script>
   <script src="assets/js/plugins/preloader.js"></script>
   <script src="assets/js/plugins/owl.carousel.min.js"></script>
+  <script src="assets/js/plugins/waypoints.min.js"></script>
+  <script src="assets/js/plugins/jquery.counterup.min.js"></script>
+  <!-- main js -->
+  <script src="assets/js/main.js"></script>
   
 </body>
 </html>
