--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="assets/css/plugins/owl.carousel.min.css">
   <!-- stylesheet -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
  <!--  Header section -->
@@ -28,6 +29,9 @@
          <div class="col-lg-2">
            <div class="logo">
              <a href="#"><img src="assets/img/logo.png" alt=""></a>
+           </div>
+           <div class="mobile-menu">
+             <i class="fa fa-bars"></i>
            </div>
          </div>
          <div class="col-lg-8 text-center">
@@ -187,13 +191,96 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row text-center">
+      <!-- single counter box -->
       <div class="col">
-
+          <div class="counter-box">
+            <div class="icon">
+              <i class="fa fa-user"></i>
+            </div>
+            <span class="counter">3258</span>
+            Satisfied Clients
+          </div>
+      </div>
+      <!-- single counter box end -->
+       <!-- single counter box -->
+       <div class="col">
+        <div class="counter-box">
+          <div class="icon">
+            <i class="fa fa-clock-o"></i>
+          </div>
+          <span class="counter">30</span>
+          Years Of Experience
+        </div>
+    </div>
+    <!-- single counter box end -->
+     <!-- single counter box -->
+     <div class="col">
+      <div class="counter-box">
+        <div class="icon">
+          <i class="fa fa-diamond"></i>
+        </div>
+        <span class="counter">140</span>
+        Positive Solutions
+      </div>
+  </div>
+  <!-- single counter box end -->
+   <!-- single counter box -->
+   <div class="col">
+    <div class="counter-box">
+      <div class="icon">
+        <i class="fa fa-heart"></i>
+      </div>
+      <span class="counter">256</span>
+      Insurances
+    </div>
+</div>
+<!-- single counter box end -->
+ <!-- single counter box -->
+ <div class="col">
+  <div class="counter-box">
+    <div class="icon">
+      <i class="fa fa-flag"></i>
+    </div>
+    <span class="counter">3285</span>
+    Businesses Growing
+  </div>
+</div>
+<!-- single counter box end -->
+    </div>
+    <div class="row">
+      <div class="inso-service-slider owl-carousel">
+        <!-- single item -->
+        <div class="single-items-slide">
+          <img src="assets/img/s1.jpg" alt="">
+        </div>
+        <!-- single item end -->
+        <!-- single item -->
+        <div class="single-items-slide">
+          <img src="assets/img/s2.jpg" alt="">
+        </div>
+        <!-- single item end -->
+        <!-- single item -->
+        <div class="single-items-slide">
+          <img src="assets/img/s3.jpg" alt="">
+        </div>
+        <!-- single item end -->
+        <!-- single item -->
+        <div class="single-items-slide">
+          <img src="assets/img/s4.jpg" alt="">
+        </div>
+        <!-- single item end -->
+        <!-- single item -->
+        <div class="single-items-slide">
+          <img src="assets/img/s5.jpg" alt="">
+        </div>
+        <!-- single item end -->
+       
       </div>
     </div>
   </div>
 </div>
+<!-- service section end -->
  <!-- footer section -->
 
  <footer>
@@ -268,14 +355,16 @@
  </footer>
 
  <!-- jquery -->
-  <script  src="assets/js/jquery-3.2.1.slim.min.js"></script>
+  <!-- <script  src="assets/js/jquery-3.2.1.slim.min.js"></script> -->
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.js"></script>
   <!-- bootstrap -->
   <script src="assets/js/bootstrap.min.js"></script>
   <!-- proper js -->
   <script src="assets/js/popper.min.js"></script>
   <!-- plugins -->
   <script src="assets/js/plugins/wow.js"></script>
-  <script src="assets/js/plugins/preloader.js"></script>
+  <!-- <script src="assets/js/plugins/preloader.js"></script> -->
   <script src="assets/js/plugins/owl.carousel.min.js"></script>
   <script src="assets/js/plugins/waypoints.min.js"></script>
   <script src="assets/js/plugins/jquery.counterup.min.js"></script>
